@@ -1,3 +1,13 @@
+2013-01-02  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libfortran/55818
+	* io/list_read.c (read_real): Do not call hit_eof when EOF can be
+	treated as a value separator.
+	(parse_real): Likewise.
+	(read_logical): Likewise.
+	(read_character): Likewise.
+	(read_complex): Likewise.
+
 2012-12-27  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR libfortran/48976
